# community-rpg

./: .copier-answers.yml  .flake8  .gitignore  README.md  dodo.py  pyproject.toml
resources/data/: item_dictionary.json
resources/maps/: main_map_new.json
rpg/: __main__.py  constants.py  load_game_map.py  message_box.py
rpg/sprites/: character_sprite.py  item_sprite.py  player_sprite.py
rpg/views/: game_view.py  loading_view.py
src/: __init__.py  __main__.py
src/resources/maps/: main_map_new.json
src/rpg/: constants.py  draw_bar.py  game_state.py  load_game_map.py  message_box.py
src/rpg/sprites/: character_sprite.py  path_following_sprite.py  player_sprite.py  random_walking_sprite.py
src/rpg/views/: game_view.py  inventory_view.py  loading_view.py  main_menu_view.py  settings_view.py
src/tasks/: __init__.py  task1.py
tasks/: task1.py
tests/: __init__.py  configuration.py  test_zz_rpg.py
