[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "community_rpg"
version = "0.1.0"
description = "An Open Source RPG Game developed with Python using the Arcade library."
authors = ["Paul Vincent Craven <paul.craven@simpson.edu>"]
license = "MIT"
repository = "https://github.com/pythonarcade/community-rpg"
include = ["LICENSE"]
readme = "README.md"
packages = [{include = "src"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[tool.poetry.dependencies]
python = "^3.10.5"
arcade = ">=2.6.10"
loguru = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
pattern-feedback-tool = ">=0.1.0"
